--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue": "^2.7.16",
+    "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
